terraform/environments/integration-hub-file-transfer/security-group.tf
resource "aws_security_group" "transfer" {
  name        = "${local.application_name}-${local.environment}-transfer"
  description = "Allow SFTP and FTPS access to the Transfer Family server"
  vpc_id      = module.vpc_isolated.vpc_id

  dynamic "ingress" {
    for_each = local.transfer_cidr_blocks

    content {
      description = "SFTP"
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = [ingress.value]
    }
  }

  dynamic "ingress" {
    for_each = local.transfer_cidr_blocks

    content {
      description = "FTPS control"
      from_port   = 21
      to_port     = 21
      protocol    = "tcp"
      cidr_blocks = [ingress.value]
    }
  }

  dynamic "ingress" {
    for_each = local.transfer_cidr_blocks

    content {
      description = "FTPS data"
      from_port   = 8192
      to_port     = 8200
      protocol    = "tcp"
      cidr_blocks = [ingress.value]
    }
  }

  tags = local.tags
}
